--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,22 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Navbar from '../components/Navbar.astro';
+import AsideB from '../components/AsideB.astro';
+import AboutMe from '../components/AboutMe.astro';
+import "../styles/global.css";
 ---
 
 <Layout>
-	<Welcome />
+   <Navbar />
+   <AsideB />
+
+   <div class="p-4 sm:ml-64">
+      <div class="p-4 border-2 border-gray-200 border-dashed dark:border-gray-700 mt-14">
+                  
+            <AboutMe />
+
+      </div>
+   </div>
+
 </Layout>
+
