--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+html.dark {
+    background-color: #111111;
+    color: #fff;
+  }
+
+
+  .dark .nav-links a {
+    color: #fff;
+  }
