theme errors have been fixed

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,13 +1,15 @@
+---
+---
 
-  <div class="mx-auto max-w-7xl p-7">
+<div class="mx-auto max-w-7xl p-7">
 
     <div class="mx-auto">
       <dl class="grid max-w-xl grid-cols-1 gap-x-8 gap-y-10 lg:max-w-none lg:grid-cols-2 lg:gap-y-16">
         <div class="relative pl-16">
-          <dt class="text-base/7 font-semibold text-gray-900">
+          <dt class="text-base/7 font-semibold text-gray-900 dark:text-gray-200">
 
           <div class="absolute top-0 left-0 flex size-10 items-center justify-center 
-          bg-black dark:bg-transparent dark:border-white border border-dashed
+          bg-black dark:bg-gray-700
           p-2">
             <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
@@ -16,40 +18,49 @@
           </div>
             Development of Modern Applications
           </dt>
-          <dd class="mt-2 text-base/7 text-gray-600">I specialize in developing Single Page Applications (SPA), Multi-Page Applications (MPA), and Software as a Service (SaaS) solutions using cutting-edge technologies such as Vue/Nuxt, Node.js/Express, and Laravel.</dd>
+          <dd class="mt-2 text-base/7 text-gray-600 dark:text-gray-300">I specialize in developing Single Page Applications (SPA), Multi-Page Applications (MPA), and Software as a Service (SaaS) solutions using cutting-edge technologies such as Vue/Nuxt, Node.js/Express, and Laravel.</dd>
         </div>
         <div class="relative pl-16">
-          <dt class="text-base/7 font-semibold text-gray-900">
-            <div class="absolute top-0 left-0 flex size-10 items-center justify-center bg-black dark:bg-transparent dark:border-white border border-dashed">
-              <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
-              </svg>
-            </div>
+          <dt class="text-base/7 font-semibold text-gray-900 dark:text-gray-200">
+          <div class="absolute top-0 left-0 flex size-10 items-center justify-center 
+          bg-black dark:bg-gray-700
+          p-2">
+            <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
+            </svg>
+
+          </div>
             Production Deployment
           </dt>
-          <dd class="mt-2 text-base/7 text-gray-600">I assist clients in launching their websites into production, ensuring smooth transitions and minimal downtime.</dd>
+          <dd class="mt-2 text-base/7 text-gray-600 dark:text-gray-300">I assist clients in launching their websites into production, ensuring smooth transitions and minimal downtime.</dd>
         </div>
         <div class="relative pl-16">
-          <dt class="text-base/7 font-semibold text-gray-900">
-            <div class="absolute top-0 left-0 flex size-10 items-center justify-center bg-black dark:bg-transparent dark:border-white border border-dashed">
-              <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
-              </svg>
-            </div>
+          <dt class="text-base/7 font-semibold text-gray-900 dark:text-gray-200">
+          <div class="absolute top-0 left-0 flex size-10 items-center justify-center 
+          bg-black dark:bg-gray-700
+          p-2">
+            <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
+            </svg>
+
+          </div>
             Certificate Management and Maintenance
           </dt>
-          <dd class="mt-2 text-base/7 text-gray-600">I handle the setup and maintenance of SSL certificates to ensure secure communication and data protection.</dd>
+          <dd class="mt-2 text-base/7 text-gray-600 dark:text-gray-300">I handle the setup and maintenance of SSL certificates to ensure secure communication and data protection.</dd>
         </div>
         <div class="relative pl-16">
-          <dt class="text-base/7 font-semibold text-gray-900">
-            <div class="absolute top-0 left-0 flex size-10 items-center justify-center bg-black dark:bg-transparent dark:border-white border border-dashed">
-              <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
-              </svg>
-            </div>
+          <dt class="text-base/7 font-semibold text-gray-900 dark:text-gray-200">
+          <div class="absolute top-0 left-0 flex size-10 items-center justify-center 
+          bg-black dark:bg-gray-700
+          p-2">
+            <svg class="w-6 h-6 text-gray-800 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m9 5 7 7-7 7"/>
+            </svg>
+
+          </div>
             Focus on Security and SEO
           </dt>
-          <dd class="mt-2 text-base/7 text-gray-600">I prioritize website security and optimize site performance for search engines to enhance visibility and user experience.</dd>
+          <dd class="mt-2 text-base/7 text-gray-600 dark:text-gray-300">I prioritize website security and optimize site performance for search engines to enhance visibility and user experience.</dd>
         </div>
       </dl>
     </div>
