--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import "../styles/global.css";
    <Navbar />
    <AsideB />
 
-   <div class="p-4 sm:ml-64">
+   <div class="p-4 md:ml-64">
       <div class="p-4 border-2 border-gray-200 border-dashed dark:border-gray-700 mt-14">
                   
             <AboutMe />
