--- a/src/components/AsideB.astro
+++ b/src/components/AsideB.astro
@@ -3,7 +3,7 @@
 
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen bg-white border-r border-gray-200 dark:bg-gray-800 dark:border-gray-700 flex flex-col pt-20"
+  class="fixed top-0 left-0 z-40 w-64 h-screen bg-white border-r border-gray-200 dark:bg-gray-900 dark:border-gray-700 flex flex-col pt-20 -translate-x-full transition-transform duration-300 ease-in-out md:translate-x-0"
   aria-label="Sidebar"
 >
   <!-- Скроллимая часть -->
